# gRPC Proto 定义
syntax = "proto3";

package ai_foundation;

// 单个消息
message Message {
    string role = 1;
    string content = 2;
    string name = 3;
    repeated ToolCall tool_calls = 4;
    string tool_call_id = 5;
}

// 工具调用
message ToolCall {
    string id = 1;
    string type = 2;
    FunctionCall function = 3;
}

message FunctionCall {
    string name = 1;
    string arguments = 2;
}

// Token使用统计
message Usage {
    int32 prompt_tokens = 1;
    int32 completion_tokens = 2;
    int32 total_tokens = 3;
}

// ===== 请求消息 =====

message SingleCallRequest {
    string model = 1;
    repeated Message messages = 2;
    float temperature = 3;
    int32 max_tokens = 4;
    bool stream = 5;
    bool json_mode = 6;
    map<string, string> extra_params = 7;
}

message ChatRequest {
    string conversation_id = 1;
    string model = 2;
    repeated Message messages = 3;
    float temperature = 4;
    int32 max_tokens = 5;
    bool json_mode = 6;
}

message StreamRequest {
    string model = 1;
    repeated Message messages = 2;
    float temperature = 3;
    int32 max_tokens = 4;
}

message AgentRequest {
    string task = 1;
    repeated Message messages = 2;
    string model = 3;
    repeated ToolDefinition tools = 4;
    int32 max_iterations = 5;
}

message ToolDefinition {
    string name = 1;
    string description = 2;
    string parameters = 3;  // JSON string
}

message ImageRequest {
    string provider = 1;
    string prompt = 2;
    string size = 3;
    int32 quality = 4;
}

message MemoryRequest {
    string key = 1;
    string content = 2;
    string metadata = 3;  // JSON string
}

message MemoryQueryRequest {
    string query = 1;
    int32 top_k = 2;
}

// ===== 响应消息 =====

message SingleCallResponse {
    string content = 1;
    Usage usage = 2;
    string model = 3;
    string finish_reason = 4;
    repeated ToolCall tool_calls = 5;
}

message ChatResponse {
    string content = 1;
    Usage usage = 2;
    string conversation_id = 3;
    repeated ToolCall tool_calls = 4;
}

message StreamResponse {
    string chunk = 1;
    bool is_final = 2;
    Usage usage = 3;
}

message AgentResponse {
    bool success = 1;
    string output = 2;
    repeated IntermediateStep steps = 3;
    int32 tokens_used = 4;
    string error = 5;
}

message IntermediateStep {
    int32 step = 1;
    string thought = 2;
    string action = 3;
    string action_input = 4;
    string observation = 5;
}

message ImageResponse {
    string image_url = 1;
    string image_base64 = 2;
    string provider = 3;
}

message MemoryResponse {
    bool success = 1;
    string message = 2;
}

message MemoryQueryResponse {
    repeated SearchResult results = 1;
}

message SearchResult {
    string key = 1;
    string content = 2;
    float score = 3;
    string metadata = 4;
}

// ===== 服务定义 =====

service AICoreService {
    // 单次调用
    rpc SingleCall(SingleCallRequest) returns (SingleCallResponse);

    // Chat对话
    rpc Chat(ChatRequest) returns (ChatResponse);

    // 流式回复
    rpc StreamCall(StreamRequest) returns (stream StreamResponse);

    // Agent执行
    rpc ExecuteAgent(AgentRequest) returns (AgentResponse);

    // 图像生成
    rpc GenerateImage(ImageRequest) returns (ImageResponse);

    // 记忆管理
    rpc StoreMemory(MemoryRequest) returns (MemoryResponse);
    rpc RetrieveMemory(MemoryQueryRequest) returns (MemoryQueryResponse);

    // 工具调用
    rpc CallTool(ToolCallRequest) returns (ToolCallResponse);
}

message ToolCallRequest {
    string tool_name = 1;
    string parameters = 2;  // JSON string
}

message ToolCallResponse {
    bool success = 1;
    string result = 2;
    string error = 3;
}

// 健康检查
service HealthService {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
    string version = 2;
}
